fix: allow auth endpoints and bypass JWT filter for login (resolve 403 issue)